sema/testdata/gcc-c99-extra/reject/20031222-1.c
void f ()
{
	for (; int ; );
}

void foo ()
{
        while (int i);
}
